fixed sonarqube